--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -6,5 +6,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Made by.</p>
+    <p>Hanifi Abrar Setiawan 5025211066</p>
+    <p>I Putu Arya Prawaira 5025211065</p>
 </div>
+
